Add alt labels to link icons

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,7 +78,7 @@ const markVar = `url(${mark.src})`;
           </div>
           <div class="athlete more-wrapper">
             <a href="/athlete">
-              <img src={arrowSimple.src} alt="↓">
+              <img src={arrowSimple.src} alt="Arrow icon, click to view Athlete page">
               <p>View More</p>
             </a>
           </div>
@@ -101,7 +101,7 @@ const markVar = `url(${mark.src})`;
           </ul>
           <div class="dietician more-wrapper">
             <a href="/dietitian">
-              <img src={arrowSimple.src} alt="↓">
+              <img src={arrowSimple.src} alt="Arrow icon, click to view Dietitian page">
               <p>Learn More</p>
             </a>
           </div>
