--- a/src/components/Sponsor.astro
+++ b/src/components/Sponsor.astro
@@ -6,7 +6,7 @@ import sterling from '../images/logo/sterling-logo.svg'
 import enduro from '../images/logo/enduro.png'
 import totem from '../images/logo/totem.png'
 import g7 from '../images/logo/g7-logo.png'
-import physi from '../images/logo/physi.png'
+import fenix from '../images/logo/fenix.png'
 const sponsors = [
 {
     name: `Arc'teryx`,
@@ -72,11 +72,11 @@ const sponsors = [
     },
   },
   {
-    name: 'Physivantage',
-    url: 'https://physivantage.com/',
+    name: 'Fenix',
+    url: 'https://www.fenixlighting.com/',
     img: {
-      url: physi,
-      alt: 'Physivantage Logo',
+      url: fenix,
+      alt: 'Fenix Logo',
       size: '45px',
     },
   },
