feat: update Achievements block

--- a/src/components/Achieve.astro
+++ b/src/components/Achieve.astro
@@ -54,6 +54,27 @@ const multi = [
     location: 'Mount Hooker'
   },
   {
+    climb: 'Cousin of Death',
+    grade: '5.13d',
+    pitches: 5,
+    style: '',
+    location: 'Insomnia Canyon'
+  },
+  {
+    climb: 'Cult Leader',
+    grade: '5.13d',
+    pitches: 5,
+    style: '',
+    location: 'Mormon Canyon'
+  },
+  {
+    climb: `Dickel's Delight`,
+    grade: '5.13c',
+    pitches: 6,
+    style: '',
+    location: 'Mormon Canyon'
+  },
+  {
     climb: 'The Honeymoon is Over',
     grade: '5.13c',
     pitches: 8,
@@ -66,13 +87,6 @@ const multi = [
     pitches: 5,
     style: '',
     location: 'Squamish'
-  },
-  {
-    climb: 'Mark of the Beast',
-    grade: '5.13b',
-    pitches: 5,
-    style: '',
-    location: 'Yosemite'
   },
   {
     climb: 'Barnacle Scars',
