feat: update sponsors, adding climbstrong; update achieve

--- a/src/components/Achieve.astro
+++ b/src/components/Achieve.astro
@@ -47,6 +47,13 @@ const bigwall = [
 ];
 const multi = [
 {
+    climb: 'Real Ultimate Power',
+    grade: '5.14a',
+    pitches: 5,
+    style: 'First in-a-day Ascent',
+    location: 'Mormon Canyon'
+  },
+{
     climb: 'Sendero Luminoso',
     grade: '5.13d',
     pitches: 13,
@@ -80,13 +87,6 @@ const multi = [
     pitches: 8,
     style: '',
     location: 'RMNP',
-  },
-  {
-    climb: 'Stélmexw',
-    grade: '5.13c',
-    pitches: 5,
-    style: '',
-    location: 'Squamish'
   },
   {
     climb: 'Barnacle Scars',
