--- a/src/components/Sponsor.astro
+++ b/src/components/Sponsor.astro
@@ -7,6 +7,7 @@ import enduro from '../images/logo/enduro.png'
 import totem from '../images/logo/totem.png'
 import g7 from '../images/logo/g7-logo.png'
 import fenix from '../images/logo/fenix.png'
+import climbstrong from '../images/logo/climbstrong.svg'
 const sponsors = [
 {
     name: `Arc'teryx`,
@@ -72,14 +73,23 @@ const sponsors = [
     },
   },
   {
-    name: 'Fenix',
-    url: 'https://www.fenixlighting.com/',
+    name: 'Climb Strong',
+    url: 'https://www.climbstrong.com/',
     img: {
-      url: fenix,
-      alt: 'Fenix Logo',
-      size: '45px',
+      url: climbstrong,
+      alt: 'ClimbStrong Logo',
+      size: '50px',
     },
   },
+  // {
+  //   name: 'Fenix',
+  //   url: 'https://www.fenixlighting.com/',
+  //   img: {
+  //     url: fenix,
+  //     alt: 'Fenix Logo',
+  //     size: '45px',
+  //   },
+  // },
 ]
 ---
 <section class="sponsors-section">
