feat: add REDs badge, update homepage, upgrade Astro to v5

--- a/src/pages/athlete.astro
+++ b/src/pages/athlete.astro
@@ -2,7 +2,7 @@
 import Achieve from "../components/Achieve.astro";
 import Sponsor from "../components/Sponsor.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
-import wolverine from "../images/gallery/Wolverine.Lite.jpg";
+import cousin from "../images/gallery/CousinOfDeathP4.jpg";
 import arrow from "../images/icons/arrow-simple-white.svg";
 
 const pageInfo = {
@@ -10,9 +10,9 @@ const pageInfo = {
   description: 'Relentlessly pursuing big walls and big goals with tenacity and grit, Amity enjoys the challenge of pushing physical and mental limits in the vertical realm.'
 }
 const image = {
-  url: wolverine.src,
-  position: '60%',
-  alt: 'Amity climbing Wolverine, 13a trad, onsight'
+  url: cousin.src,
+  position: '27%',
+  alt: 'Amity climbing Cousin of Death, pitch 4, in Insomnia Canyon'
 }
 ---
 
