feat: update gallery, improve accessibility and seo

--- a/src/components/Achieve.astro
+++ b/src/components/Achieve.astro
@@ -3,176 +3,176 @@ import Wall from "./Wall.astro";
 import Pitch from "./Pitch.astro";
 const bigwall = [
   {
-    climb: 'El Niño',
-    grade: '5.13c',
+    climb: "El Niño",
+    grade: "5.13c",
     pitches: 25,
-    style: 'ground-up',
-    location: 'Yosemite',
+    style: "ground-up",
+    location: "Yosemite",
   },
   {
-    climb: 'El Corazon',
-    grade: '5.13b',
+    climb: "El Corazon",
+    grade: "5.13b",
     pitches: 32,
-    style: 'ground-up',
-    location: 'Yosemite',
+    style: "ground-up",
+    location: "Yosemite",
   },
   {
-    climb: 'FRIAD: Freerider In A Day',
-    grade: '5.13a',
+    climb: "FRIAD: Freerider In A Day",
+    grade: "5.13a",
     pitches: 32,
-    style: 'self-supported, no rehearsal or stashing',
-    location: 'Yosemite',
+    style: "self-supported, no rehearsal or stashing",
+    location: "Yosemite",
   },
   {
-    climb: 'Father Time',
-    grade: '5.13b',
+    climb: "Father Time",
+    grade: "5.13b",
     pitches: 20,
-    style: 'ground-up',
-    location: 'Yosemite',
+    style: "ground-up",
+    location: "Yosemite",
   },
   {
-    climb: 'Golden Gate',
-    grade: '5.13a',
+    climb: "Golden Gate",
+    grade: "5.13a",
     pitches: 33,
-    style: 'ground-up',
-    location: 'Yosemite',
+    style: "ground-up",
+    location: "Yosemite",
   },
   {
-    climb: 'Freerider',
-    grade: '5.13a',
+    climb: "Freerider",
+    grade: "5.13a",
     pitches: 31,
-    style: 'ground-up',
-    location: 'Yosemite',
-  }
+    style: "ground-up",
+    location: "Yosemite",
+  },
 ];
 const multi = [
-{
-    climb: 'Real Ultimate Power',
-    grade: '5.14a',
+  {
+    climb: "Real Ultimate Power",
+    grade: "5.14a",
     pitches: 5,
-    style: 'First in-a-day Ascent',
-    location: 'Mormon Canyon'
+    style: "first in-a-day ascent",
+    location: "Mormon Canyon",
   },
-{
-    climb: 'Sendero Luminoso',
-    grade: '5.13d',
+  {
+    climb: "Sendero Luminoso",
+    grade: "5.13d",
     pitches: 13,
-    style: '',
-    location: 'Mount Hooker'
+    style: "",
+    location: "Mount Hooker",
   },
   {
-    climb: 'Cousin of Death',
-    grade: '5.13d',
+    climb: "Cousin of Death",
+    grade: "5.13d",
     pitches: 5,
-    style: '',
-    location: 'Insomnia Canyon'
+    style: "",
+    location: "Insomnia Canyon",
   },
   {
-    climb: 'Cult Leader',
-    grade: '5.13d',
+    climb: "Cult Leader",
+    grade: "5.13d",
     pitches: 5,
-    style: '',
-    location: 'Mormon Canyon'
+    style: "",
+    location: "Mormon Canyon",
   },
   {
     climb: `Dickel's Delight`,
-    grade: '5.13c',
+    grade: "5.13c",
     pitches: 6,
-    style: '',
-    location: 'Mormon Canyon'
+    style: "",
+    location: "Mormon Canyon",
   },
   {
-    climb: 'The Honeymoon is Over',
-    grade: '5.13c',
+    climb: "The Honeymoon is Over",
+    grade: "5.13c",
     pitches: 8,
-    style: '',
-    location: 'RMNP',
+    style: "",
+    location: "RMNP",
   },
   {
-    climb: 'Barnacle Scars',
-    grade: '5.13',
+    climb: "Barnacle Scars",
+    grade: "5.13",
     pitches: 3,
-    style: 'First Ascent',
-    location: 'RMNP'
-  }
+    style: "first ascent",
+    location: "RMNP",
+  },
 ];
 const singleTrad = [
   {
-    climb: 'Book of Hate',
-    grade: '5.13d',
+    climb: "Book of Hate",
+    grade: "5.13d",
     // style: 'free, redpoint',
-    location: 'Yosemite',
+    location: "Yosemite",
   },
   {
-    climb: 'Stingray',
-    grade: '5.13d',
+    climb: "Stingray",
+    grade: "5.13d",
     // style: 'free, redpoint',
-    location: 'Joshua Tree',
+    location: "Joshua Tree",
   },
   {
-    climb: 'Tainted Love',
-    grade: '5.13d R',
+    climb: "Tainted Love",
+    grade: "5.13d R",
     // style: 'free, redpoint',
-    location: 'Squamish',
+    location: "Squamish",
   },
-    {
-    climb: 'Enter the Dragon',
-    grade: '5.13+ R',
-    style: 'First Female Ascent',
-    location: 'The Fins',
-  }
+  {
+    climb: "Enter the Dragon",
+    grade: "5.13+ R",
+    style: "first female ascent",
+    location: "The Fins",
+  },
 ];
 const singleSport = [
   {
-    climb: 'Sarchasm',
-    grade: '5.14a',
+    climb: "Sarchasm",
+    grade: "5.14a",
     // style: 'free, redpoint',
-    location: 'RMNP'
-  },
-    {
-    climb: 'Vesper',
-    grade: '5.13d/14a',
-    // style: 'free, redpoint',
-    location: 'The Fins'
+    location: "RMNP",
   },
   {
-    climb: 'Third Millenium',
-    grade: '5.13d',
+    climb: "Vesper",
+    grade: "5.13d/14a",
     // style: 'free, redpoint',
-    location: 'The Monastery'
+    location: "The Fins",
   },
   {
-    climb: 'Tombraider',
-    grade: '5.13d',
+    climb: "Third Millenium",
+    grade: "5.13d",
     // style: 'free, redpoint',
-    location: 'Rifle'
+    location: "The Monastery",
+  },
+  {
+    climb: "Tombraider",
+    grade: "5.13d",
+    // style: 'free, redpoint',
+    location: "Rifle",
   },
 ];
-
 ---
+
 <section aria-label="Climbing Achievements">
   <h1>Free Climbing Achievements</h1>
   <div class="bigwall card-container">
-    <h3>Big Wall</h3>
+    <h2>Big Wall</h2>
     <div class="list-container">
       {bigwall.map((item) => <Wall climb={item} />)}
     </div>
   </div>
   <div class="multi card-container">
-    <h3>Multipitch</h3>
+    <h2>Multipitch</h2>
     <div class="list-container">
       {multi.map((item) => <Wall climb={item} />)}
     </div>
   </div>
   <div class="singles-wrapper">
-    <div class="singleTrad card-container"> 
-      <h3>Trad</h3>
+    <div class="singleTrad card-container">
+      <h2>Trad</h2>
       <div class="list-container">
         {singleTrad.map((item) => <Pitch climb={item} />)}
       </div>
     </div>
     <div class="singleSport card-container">
-      <h3>Sport</h3>
+      <h2>Sport</h2>
       <div class="list-container">
         {singleSport.map((item) => <Pitch climb={item} />)}
       </div>
@@ -197,8 +197,8 @@ const singleSport = [
   h1 {
     text-align: center;
   }
-  h3 {
-    font-family: "Unbound", "Playfair", Georgia, 'Times New Roman', Times, serif;
+  h2 {
+    font-family: "Unbound", "Playfair", Georgia, "Times New Roman", Times, serif;
   }
   .card-container {
     margin: 1vh 2vw;
@@ -209,7 +209,7 @@ const singleSport = [
     justify-content: center;
     margin-bottom: 30px;
   }
-  .singleTrad, 
+  .singleTrad,
   .singleSport {
     margin: 0 70px 0 70px;
   }
