--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,7 +19,7 @@ body {
   flex-direction: column;
   /* justify-content: center; */
   align-items: center;
-  font-family: "Playfair", Georgia, 'Times New Roman', Times, serif;
+  font-family: "Playfair", Georgia, "Times New Roman", Times, serif;
   background-color: rgba(245, 245, 245, 0.99);
 }
 * {
@@ -31,7 +31,7 @@ h1 {
 }
 .header-name {
   color: rgb(64, 64, 64);
-  letter-spacing: -.5px;
+  letter-spacing: -0.5px;
   font-weight: 800;
 }
 /* nav styles */
@@ -170,7 +170,7 @@ h1 {
   font-size: 1em;
   color: rgb(64, 64, 64);
   background-color: #f8fcfd;
-  transition: all .3s ease-in;
+  transition: all 0.3s ease-in;
 }
 .tag-item:hover {
   border: 1px solid rgb(64, 64, 64);
@@ -184,7 +184,7 @@ h1 {
 }
 /* blog post styling */
 .blog-slot a,
-.origin > a, 
+.origin > a,
 .intel > a {
   font-weight: 500;
   color: rgb(53, 84, 136);
@@ -246,12 +246,12 @@ form.contact-form {
 .contact-form label > span:first-child {
   display: none;
 }
-.contact-form input, 
+.contact-form input,
 .contact-form textarea {
   min-height: 50px;
   max-width: 580px;
   width: 100%;
-  font-family: "Playfair", Georgia, 'Times New Roman', Times, serif;
+  font-family: "Playfair", Georgia, "Times New Roman", Times, serif;
   font-size: 1rem;
   letter-spacing: -0.3px;
   border: 2px solid rgb(211, 211, 211);
@@ -268,7 +268,7 @@ form.contact-form {
   justify-self: center;
 }
 .contact-form .errors-container ul {
-  list-style-type: circle;   
+  list-style-type: circle;
 }
 .contact-form .errors-container ul li::marker {
   color: rgb(254, 7, 62);
@@ -276,7 +276,7 @@ form.contact-form {
 .contact-form textarea {
   min-height: 100px;
 }
-.contact-form input:focus, 
+.contact-form input:focus,
 .contact-form textarea:focus {
   border-color: rgb(53, 84, 136);
   outline: none;
@@ -287,10 +287,10 @@ a.return-home {
   padding: 1rem 2rem;
   margin: 0.5rem;
   justify-self: center;
-  border: 2px solid rgb(254, 7, 62);
+  border: 3px solid rgb(254, 7, 62);
   border-radius: 5px;
-  background-color: rgb(254, 7, 62);
-  color: rgb(245, 245, 245);
+  background-color: rgb(255, 255, 255);
+  color: rgb(64, 64, 64);
   font-family: "Unbound";
   font-size: 1.15rem;
   font-weight: 800;
@@ -361,8 +361,8 @@ a.return-home {
     transform: scaleX(0);
     -webkit-transform-origin: bottom right;
     transform-origin: bottom right;
-    transition: -webkit-transform .25s ease-out;
-    transition: transform .25s ease-out;
+    transition: -webkit-transform 0.25s ease-out;
+    transition: transform 0.25s ease-out;
     width: 100%;
   }
   .nav-links a:hover::after {
